# docs/openapi/openapi.json
@@ -611,6 +611,15 @@
         "operationId": "getFormDefinition",
         "parameters": [
           {
+            "in": "query",
+            "name": "formVersion",
+            "required": false,
+            "schema": {
+              "minimum": 1,
+              "type": "integer"
+            }
+          },
+          {
             "in": "path",
             "name": "formId",
             "required": true,
