# libs/forms/ts/src/dtos/form-definition-query.dto.ts
@@ -1,0 +1,7 @@
+import { Static, Type } from '@sinclair/typebox';
+
+export const FormDefinitionQuerySchema = Type.Object({
+  formVersion: Type.Optional(Type.Integer({ minimum: 1 })),
+});
+
+export type FormDefinitionQueryDTO = Static<typeof FormDefinitionQuerySchema>;
